--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,7 +1,10 @@
 /*place section*/
-.places
+.places .places_inside
 {
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 /*h1 header*/
 .places h1
@@ -11,20 +14,15 @@
     margin-left: 10px;
     text-align: left;
 }
-
-
-.places article
+/*articles*/
+.places_inside article
 {
     width: 390px;
     padding: 20px;
     margin: 20px;
     border: #FF5A5F 1px solid;
     border-radius: 4px;
-    /*extra*/
-    display: inline-block;
-
-    
-
+    /*extra*/    
 }
 
 /*specific places*/
@@ -33,3 +31,6 @@
     font-size: 30px;
     text-align: center;
 }
+
+
+
