--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -8,8 +8,16 @@ footer
     bottom: 0;
     /*absolute position *respect to the parent*/
     position: absolute;
+
     /*Using flexbox*/
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
+}
+
+footer p
+{
+    text-align: center;
+    vertical-align: middle;
+    line-height: 1.7rem;
 }
