--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,7 +1,10 @@
 /*place section*/
-.places
+.places .places_inside
 {
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 /*h1 header*/
 .places h1
@@ -11,9 +14,8 @@
     margin-left: 10px;
     text-align: left;
 }
-
-
-.places article
+/*articles*/
+.places_inside article
 {
     width: 390px;
     padding: 20px;
@@ -21,37 +23,33 @@
     border: #FF5A5F 1px solid;
     border-radius: 4px;
     /*extra*/
-    display: inline-block;
-    /*to apply absolute position elements inside*/
     position: relative;
-
-    
-
 }
 
-/*each place name*/
+/*specific places*/
 .places article h2
 {
     font-size: 30px;
     text-align: center;
 }
+/*------------------------*/
+/*price by night*/
 
-/*price*/
-.places .price_by_night
+.places_inside .price_by_night
 {
     color: #FF5A5F;
-    border: #FF5A5F 4px solid;
+    border: 4px #FF5A5F solid;
     border-radius: 50%;
-    min-width: 60px;
+    min-width: 60PX;
     height: 60px;
     font-size: 30px;
-    display: inline-block;
-    /*center the number*/
+    /*location*/
     position: absolute;
     top: 25px;
     right: 25px;
 }
 
+/*center the price*/
 .places .price_by_night span
 {
     margin-top: 15px;
@@ -59,28 +57,29 @@
     display: inline-block;
 }
 
-/*Information*/
+/*INFORMATION*/
 
 .places .information
 {
     height: 80px;
     border-top: #DDDDDD 1px solid;
     border-bottom: #DDDDDD 1px solid;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/*guest*/
+/*guests*/
 .places .information .max_guest
 {
     width: 100px;
-    
-    height: 80px;
-    width: 80px;
 
 }
-.places .information .max_guest span
+
+.places .information .max_guest .guest
 {
     content:url(../images/icon_group.png);
-    display: inline-block;
 }
 
 .places .information .max_guest h4
@@ -89,4 +88,54 @@
     margin-bottom: 5px;
 }
 
+/*number of rooms*/
+.places .information .number_rooms
+{
+    width: 100px;
+}
 
+.places .information .number_rooms .bed_room
+{
+    content: url(../images/icon_bed.png);
+}
+
+.places .information .number_rooms h4
+{
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+/*bathrooms*/
+.places .information .number_bathrooms
+{
+    width: 100px;
+}
+
+.places .information .number_bathrooms .bath_room
+{
+    content: url(../images/icon_bath.png);
+}
+
+.places .information .number_bathrooms h4
+{
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+/*Owners*/
+.places .user
+{
+    font-size: 16px;
+}
+
+.places .user p
+{
+    text-align: left;
+
+}
+
+.places .description
+{
+    text-align: justify;
+    
+}
